--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
 }
 .nav-link-bar-perso{
     margin: 20px;
+    border: 2px solid transparent;
+}
+.nav-link-bar-perso:hover{
+    border:2px solid deepskyblue;
 }
 .brand-perso{
     margin-left: 6px;
@@ -36,10 +40,6 @@ header{
     display: flex;
     justify-content: space-between;
 }
-.services-container>h1>span{
-    text-decoration: underline;
-    margin: 0px;
-}
 .services-container{
     height: 70vh;
     background-image: url("images/fondservices.png");
@@ -51,4 +51,61 @@ header{
 }
 .services-contained>h1{
     margin-top: 20px;
+}
+.portfolio{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.portfolio>.navbar{
+    background-color: transparent;
+}
+.portfolio>.container-img{
+    width: 87%;
+}
+.portfolio>.container-fluid>img{
+    width: 300px;
+    height: 200px;
+    margin: 10px;
+    border: none;
+}
+.default-section{
+    padding-top: 5vh;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: dimgray;
+}
+.default-section>.text-gauche{
+    width: 50%;
+}
+.default-section>.text-gauche>h1>span{
+    margin-left: 5vh;
+}
+.default-section>.text-gauche>button{
+    margin-left: 5vh;
+}
+.split>span{
+    text-decoration: underline;
+}
+.twitter{
+    padding: 6vh;
+    background-image: url("images/fondservices.png");
+    height: 30vh;
+}
+.twitter>.navbar>.container-fluid{
+    padding: 0;
+}
+.twitter>.navbar{
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+}
+.twitter>p>span{
+    font-weight: bold;
+}
+.whoIsJoe{
+    background-image: url("images/whois.jpg");
+    padding: 6vh;
+    height: 70vh;
+    background-position: center;
 }
