--- a/style.css
+++ b/style.css
@@ -3,10 +3,19 @@
 {
     font-family: 'Roboto', sans-serif;
 }
-.navbar{
+header .navbar{
+    padding: 0;
+}
+header .navbar .container-fluid{
     background-color: rgba(0, 0, 0, 0.60);
     padding: 2vh;
     padding-left: 5vh;
+}
+header .navbar{
+    font-weight: bolder;
+}
+header .navbar-brand span{
+    text-decoration: none;
 }
 .nav-link-bar-perso{
     margin: 20px;
@@ -25,13 +34,14 @@ header{
     background-position: center;
 }
 .punchline{
-    text-align: center;
-    margin:29vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 90vh;
+    align-content: center;
 }
-.punchline>h1{
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    width: auto;
+.punchline h1{
+    background-color: rgba(0, 0, 0, 0.49);
 }
 .navs-link-bar-perso{
     margin-right: 50px;
@@ -63,12 +73,18 @@ header{
 }
 .portfolio>.navbar{
     background-color: transparent;
-    margin-left: 15vh;
+    margin-left: 13vh;
 }
 .portfolio>.container-img{
-    width: 87%;
+    width: 85%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 20vh;
 }
-.portfolio>.container-fluid>img{
+.portfolio .img1{
+    background-image: url("images/portfolio/1.png");
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 300px;
     height: 200px;
     margin: 10px;
@@ -153,6 +169,12 @@ header{
 .contact{
     padding: 20vh;
     background-color: dimgray;
+}
+.contact input{
+    background-color: transparent;
+}
+.contact textarea{
+    background-color: transparent;
 }
 .form-contact{
     width: 100vh;
